--- a/assets/style.css
+++ b/assets/style.css
@@ -50,16 +50,17 @@ form input{
     width: 80px;
 }
 
-.goBack{
+.goBack {
     padding: 10px 20px;
-    margin-left: 615px;
-    margin-top: 60px;
+    margin: 50px auto; /* Auto margins on the left and right to center */
     background-color: white;
     color: blue;
     border: 1px solid blue;
     border-radius: 5px;
     cursor: pointer;
     text-decoration: none;
+    display: block; /* Ensures the button behaves like a block element */
+    width: fit-content; /* Ensures the width is based on its content */
 }
 
 table{
